5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1616_2943.log
== TEST (2019-04-01 15:03:57) 
-- CODE:
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))


-- OUTPUT:
139.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:05:22) 
-- CODE:
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M=(2*math.pi)*(R*r**2)*(Q)

print(M)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    M=(2*math.pi)*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:06:03) 
-- CODE:
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*math.pi*(R*r**2)*(Q)

print(M)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    M = 2*math.pi*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:06:28) 
-- CODE:
from math
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*math.pi*(R*r**2)*(Q)

print(M)
-- ERROR:
File "XXXX", line 1
    from math
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:06:34) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*math.pi*(R*r**2)*(Q)

print(M)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    M = 2*math.pi*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:06:58) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*(math.pi)*(R*r**2)*(Q)

print(M)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    M = 2*(math.pi)*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:07:14) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*(math.pi)*(R*r**2)*(Q)

print(M)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    M = 2*(math.pi)*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:08:05) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*(math.pi)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    M = 2*(math.pi)*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:08:24) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*math.pi*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    M = 2*math.pi*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:08:59) 
-- CODE:
from math for pi
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*math.pi*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
File "XXXX", line 1
    from math for pi
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:22) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2 *(R*r**2)*(Q)

print(round(M,2))
-- OUTPUT:
10500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:10:14) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*math.pi *(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    M = 2*math.pi *(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:10:34) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*pi.math *(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    M = 2*pi.math *(R*r**2)*(Q)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:11:52) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*math.pi*(R*r**2)*(Q)

print(round(M,2))
-- EXECUTION TIME:
0.189922
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 6, in <module>
    M = 2*math.pi*(R*r**2)*(Q)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:54) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = 2*math.pi*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    M = 2*math.pi*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:29) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

M = (math.pi)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    M = (math.pi)*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:13:37) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(math.pi)*(R*r**2)*(Q)

print(round(M,2))
-- EXECUTION TIME:
0.170099
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 8, in <module>
    M =2*(math.pi)*(R*r**2)*(Q)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:38) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(math.pi)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M =2*(math.pi)*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:15:24) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

T=math.pi

M =2*(T)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    T=math.pi
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:16) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(math.pi**2)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M =2*(math.pi**2)*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:59) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(math.pi**2)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M =2*(math.pi**2)*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:05) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

pi=float(input("pi:"))

M =2*(math.pi**2)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pi=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:31) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

pi=float(input("pi:"))

M =2*(math.pi**2)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pi=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:46) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

pi=float(input("pi:"))

M =2*(math.pi**2)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pi=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:22:02) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

match.pi=float(input("pi:"))

M =2*(math.pi**2)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    match.pi=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:23:45) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

match.pi=float(input("pi:"))

M =2*(math.pi**2)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    match.pi=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:24:17) 
-- CODE:
math
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(math.pi**2)*(R*r**2)*(Q)

print(round(M,2))
-- EXECUTION TIME:
0.145784
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 1, in <module>
    math
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:18) 
-- CODE:
math
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(math.pi**2)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    math
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:26) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(math.pi**2)*(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M =2*(math.pi**2)*(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:28:32) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(R*r**2)*(Q)*math.pi

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M =2*(R*r**2)*(Q)*math.pi
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:28:45) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(R*r**2)*(Q)*math.pi

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M =2*(R*r**2)*(Q)*math.pi
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:14) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

print(math.pi)

M =2*(R*r**2)*(Q)*math.pi

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:31:17) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

print(math.pi)

M =2*(R*r**2)*(Q)*math.pi

print(round(M,2))
-- EXECUTION TIME:
0.141333
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 6, in <module>
    print(math.pi)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:18) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

print(math.pi)

M =2*(R*r**2)*(Q)*math.pi

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:32:20) 
-- CODE:
math.pi
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(R*r**2)*(Q)*math.pi**2

print(round(M,2))
-- EXECUTION TIME:
0.168923
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 1, in <module>
    math.pi
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:21) 
-- CODE:
math.pi
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(R*r**2)*(Q)*math.pi**2

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    math.pi
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:25) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M =2*(R*r**2)*(Q)*math.pi**2

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M =2*(R*r**2)*(Q)*math.pi**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:42:03) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

match.pi=3.14

M =2*(R*r**2)*(Q)*(math.pi**2

print(round(M,2))
-- EXECUTION TIME:
0.135945
-- ERROR:
  File "/home/codebench/codes/1616/2943/main.py", line 10
    print(round(M,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:05) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

match.pi=3.14

M =2*(R*r**2)*(Q)*(math.pi**2

print(round(M,2))
-- ERROR:
File "XXXX", line 10
    print(round(M,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:42:25) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

match.pi=3.14

M =2*(R*r**2)*(Q)*(math.pi**2)

print(round(M,2))
-- EXECUTION TIME:
0.198841
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 6, in <module>
    match.pi=3.14
NameError: name 'match' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:27) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

match.pi=3.14

M =2*(R*r**2)*(Q)*(math.pi**2)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    match.pi=3.14
NameError: name 'match' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:43:26) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

match.pi=3.14
print(math.pi)

M =2*(R*r**2)*(Q)*(math.pi**2)

print(round(M,2))
-- EXECUTION TIME:
0.137713
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 6, in <module>
    match.pi=3.14
NameError: name 'match' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:27) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

match.pi=3.14
print(math.pi)

M =2*(R*r**2)*(Q)*(math.pi**2)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    match.pi=3.14
NameError: name 'match' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:43) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

math.pi=3.14
print(math.pi)

M =2*(R*r**2)*(Q)*(math.pi**2)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math.pi=3.14
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:44:13) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(R*r**2)*(Q)*(math.pi**2)

print(round(M,2))
-- EXECUTION TIME:
0.165828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 8, in <module>
    M = 2*(R*r**2)*(Q)*(math.pi**2)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:15) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(R*r**2)*(Q)*(math.pi**2)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M = 2*(R*r**2)*(Q)*(math.pi**2)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:28) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(R*r**2)*(Q)*( math.pi**2)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M = 2*(R*r**2)*(Q)*( math.pi**2)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:44:31) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(R*r**2)*(Q)*( math.pi**2)

print(round(M,2))
-- EXECUTION TIME:
0.222609
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 8, in <module>
    M = 2*(R*r**2)*(Q)*( math.pi**2)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:33) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(R*r**2)*(Q)*( math.pi**2)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M = 2*(R*r**2)*(Q)*( math.pi**2)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:46:02) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

pi=input(math.pi())
print(pi.math.pi)

M = 2*(R*r**2)*(Q)*( math.pi**2)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pi=input(math.pi())
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:46:05) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

pi=input(math.pi())
print(pi.math.pi)

M = 2*(R*r**2)*(Q)*( math.pi**2)

print(round(M,2))
-- EXECUTION TIME:
0.177861
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 6, in <module>
    pi=input(math.pi())
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:46:06) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

pi=input(math.pi())
print(pi.math.pi)

M = 2*(R*r**2)*(Q)*( math.pi**2)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pi=input(math.pi())
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:07) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))

math.pi=3.14
print(math.pi)

M = 2*(R*r**2)*(Q)*( math.pi**2)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math.pi=3.14
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:47:41) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(R*r**2)*(Q)

print(round(M,2))
-- EXECUTION TIME:
0.147805
-- TEST CASE 1:
---- input:
8.4
2.5
100
---- correct output:
103630.85
---- user output:
10500.0
-- TEST CASE 2:
---- input:
14.1
3.8
5
---- correct output:
20094.91
---- user output:
2036.04
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:42) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(R*r**2)*(Q)

print(round(M,2))
-- OUTPUT:
10500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:48:55) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*math.pi(R*r**2)*(Q)

print(round(M,2))
-- EXECUTION TIME:
0.190809
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 8, in <module>
    M = 2*math.pi(R*r**2)*(Q)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:48:57) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*math.pi(R*r**2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M = 2*math.pi(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:49:35) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(R*r**2)*(Q)
X=M*math.pi

print(round(x,2))
-- EXECUTION TIME:
0.205175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 9, in <module>
    X=M*math.pi
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:49:36) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(R*r**2)*(Q)
X=M*math.pi

print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    X=M*math.pi
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:51:17) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*math.pi**2(R*r**2)*(Q)


print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M = 2*math.pi**2(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:51:51) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*math.pi**2(R*r**2)*(Q)


print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M = 2*math.pi**2(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:52:28) 
-- CODE:
m=float(input("match.pi"))
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*math.pi**2(R*r**2)*(Q)


print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:52:54) 
-- CODE:
math.pi=float(input("match.pi"))
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*math.pi**2(R*r**2)*(Q)


print(round(M,2))
-- EXECUTION TIME:
0.237081
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 1, in <module>
    math.pi=float(input())
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:52:56) 
-- CODE:
math.pi=float(input("match.pi"))
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*math.pi**2(R*r**2)*(Q)


print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    math.pi=float(input())
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:53:14) 
-- CODE:
mathpi=float(input("match.pi"))
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*mathpi**2(R*r**2)*(Q)


print(round(M,2))
-- EXECUTION TIME:
0.149029
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 4, in <module>
    Q=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:53:16) 
-- CODE:
mathpi=float(input("match.pi"))
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*mathpi**2(R*r**2)*(Q)


print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:53:40) 
-- CODE:
mathpi=float(input("match.pi"))
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*mathpi**2(R*r**2)*(Q)


print(round(M,2))
-- EXECUTION TIME:
0.187789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 4, in <module>
    Q=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:53:42) 
-- CODE:
mathpi=float(input("match.pi"))
R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*mathpi**2(R*r**2)*(Q)


print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Q=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:54:30) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(math.pi**2)(R*r**2)*(Q)


print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M = 2*(math.pi**2)(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:54:37) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(math.pi**2)(R*r**2)*(Q)


print(round(M,2))
-- EXECUTION TIME:
0.176676
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 8, in <module>
    M = 2*(math.pi**2)(R*r**2)*(Q)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:54:39) 
-- CODE:

R=float(input("R:"))
r=float(input("r:"))
Q=float(input("Q:"))



M = 2*(math.pi**2)(R*r**2)*(Q)


print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    M = 2*(math.pi**2)(R*r**2)*(Q)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
